# scl-metal

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  requirements.txt
.github/events/: trigger_build_test.sh
.github/workflows/: build_test.yml  release.yml
docs/: Doxyfile
docs/source/: conf.py  doxygen_files.rst  index.rst
include/: crypto_cfg.h  scl_cfg.h
include/api/: defs.h  macro.h  scl_api.h  scl_hca.h  sifive_hca-0.5.x.h  utils.h
include/api/asymmetric/ecc/: ecc.h  ecdsa.h
include/api/bignumbers/: bignumbers.h
include/api/blockcipher/aes/: aes.h
include/api/hardware/: hca_macro.h  hca_utils.h  scl_hca.h
include/api/hardware/hash/: hca_sha.h  hca_sha224.h  hca_sha256.h  hca_sha384.h  hca_sha512.h  hca_sha_miscellaneous.h
include/api/hardware/v0.5/: sifive_hca-0.5.x.h
include/api/hash/: sha.h  sha224.h  sha256.h  sha384.h  sha512.h
include/api/soft/hash/: soft_sha.h  soft_sha224.h  soft_sha256.h  soft_sha384.h  soft_sha512.h
include/api/software/: scl_soft.h
include/api/software/bignumbers/: soft_bignumbers.h
include/api/software/hash/: soft_sha.h  soft_sha224.h  soft_sha256.h  soft_sha384.h  soft_sha512.h
include/backend/api/: macro.h  scl_backend_api.h
include/backend/api/bignumbers/: bignumbers.h
include/backend/api/key_derivation_functions/: kdf.h
include/backend/api/message_auth/: hmac.h
include/backend/hardware/: hca_macro.h  hca_utils.h  scl_hca.h
include/backend/software/: scl_soft.h
include/backend/software/bignumbers/: soft_bignumbers.h
include/backend/software/key_derivation_functions/: soft_kdf_x963.h
include/backend/software/message_auth/: soft_hmac.h
include/scl/: scl_aes.h  scl_aes_cbc.h  scl_aes_ccm.h  scl_aes_cfb.h  scl_aes_ctr.h  scl_aes_ecb.h  scl_aes_gcm.h  scl_aes_ofb.h  scl_defs.h  scl_ecc_keygen.h  scl_ecdh.h  scl_ecdsa.h  scl_hash.h  scl_hash_sha224.h  scl_hash_sha256.h  scl_hash_sha384.h  scl_hash_sha512.h  scl_hmac.h  scl_init.h  scl_kdf.h  scl_retdefs.h  scl_selftests.h  scl_sha.h  scl_trng.h  scl_utils.h
scripts/: scl.mk
src/: scl_init.c  scl_utils.c
src/api/: api_hca-0.5.x.c  utils.c
src/api/hardware/: api_hca-0.5.x.c  hca_utils.c
src/api/hardware/hash/: hca_sha.c  hca_sha224.c  hca_sha256.c  hca_sha384.c  hca_sha512.c  hca_sha_miscellaneous.c
src/api/hardware/v0.5/: api_hca-0.5.x.c
src/api/soft/: api_soft_backend.c
src/api/soft/hash/: sha_soft.c  soft_sha.c  soft_sha224.c  soft_sha256.c  soft_sha384.c  soft_sha512.c
src/api/software/bignumbers/: soft_bignumbers.c
src/api/software/hash/: soft_sha.c  soft_sha224.c  soft_sha256.c  soft_sha384.c  soft_sha512.c
src/asymmetric/ecc/: scl_ecc_keygen.c  scl_ecdh.c  scl_ecdsa.c
src/backend/: utils.c
src/backend/hardware/: hca_utils.c
src/backend/software/bignumbers/: soft_bignumbers.c
src/blockcipher/aes/: scl_aes_cbc.c  scl_aes_ccm.c  scl_aes_cfb.c  scl_aes_ctr.c  scl_aes_ecb.c  scl_aes_gcm.c  scl_aes_ofb.c
src/hash/sha/: scl_sha.c
src/key_derivation_functions/: scl_kdf.c
src/message_auth/: scl_hmac.c
src/random/: scl_trng.c
src/selftests/: scl_ecdsa_selftests.c  scl_sha_selftests.c
tests/: CMakeLists.txt  Makefile
tests/src/: cmdline.c  secmain.S  test-scl-metal.c  test_utils.c
tests/src/api/: test_utils.c
tests/src/api/aes/hardware/: test_hca_aes_128.c  test_hca_aes_192.c  test_hca_aes_256.c
tests/src/api/asymmetric/ecc/software/: test_soft_ecc.c  test_soft_ecdsa.c
tests/src/api/bignumbers/software/: test_soft_bignumbers.c
tests/src/api/sha/hardware/: test_hca_sha_224.c  test_hca_sha_256.c  test_hca_sha_384.c  test_hca_sha_512.c
tests/src/api/sha/software/: test_soft_sha_224.c  test_soft_sha_256.c  test_soft_sha_384.c  test_soft_sha_512.c
tests/src/asymmetric/ecc/: test_scl_ecc_keygen.c  test_scl_ecdh.c  test_scl_ecdsa.c
tests/src/backend/hardware/blockcipher/aes/: test_hca_aes_128.c  test_hca_aes_192.c  test_hca_aes_256.c  test_hca_aes_dma.c
tests/src/backend/hardware/hash/sha/: test_hca_sha_224.c  test_hca_sha_256.c  test_hca_sha_384.c  test_hca_sha_512.c
tests/src/backend/software/asymmetric/ecc/: test_soft_ecc.c  test_soft_ecc_keygen.c  test_soft_ecdh.c  test_soft_ecdsa.c
tests/src/backend/software/bignumbers/: test_soft_bignumbers.c
tests/src/backend/software/hash/sha/: test_soft_sha_224.c  test_soft_sha_256.c  test_soft_sha_384.c  test_soft_sha_512.c
tests/src/backend/software/key_derivation_functions/: test_soft_x963kdf.c
tests/src/backend/software/message_auth/: test_soft_hmac.c
tests/src/blockcipher/aes/: test_scl_aes_128.c  test_scl_aes_192.c  test_scl_aes_256.c
tests/src/hash/sha/: test_scl_sha_224.c  test_scl_sha_256.c  test_scl_sha_384.c  test_scl_sha_512.c
tests/src/key_derivation_functions/: test_scl_kdf.c
tests/src/message_auth/: test_scl_hmac.c
tests/src/random/: test_scl_trng.c
tests/src/scl/aes/: test_scl_aes_128.c  test_scl_aes_192.c  test_scl_aes_256.c
tests/src/scl/asymmetric/ecc/: test_scl_ecdsa.c
tests/src/scl/sha/: test_scl_sha_224.c  test_scl_sha_256.c  test_scl_sha_384.c  test_scl_sha_512.c
tests/src/selftests/: test_scl_selftests.c
tests/src/test_runners/: test_hca_aes_runner.c  test_hca_sha_runner.c  test_scl_aes_runner.c  test_soft_bignumbers_runner.c  test_soft_ecc_runner.c  test_soft_ecdsa_runner.c  test_soft_sha_runner.c  test_utils_runner.c
tests/src/test_runners/asymmetric/: test_scl_ecc_keygen_runner.c  test_scl_ecdh_runner.c  test_scl_ecdsa_runner.c
tests/src/test_runners/backend/hardware/: test_hca_aes_runner.c  test_hca_sha_runner.c
tests/src/test_runners/backend/software/: test_soft_bignumbers_runner.c  test_soft_ecc_keygen_runner.c  test_soft_ecc_runner.c  test_soft_ecdh_runner.c  test_soft_ecdsa_runner.c  test_soft_hmac_runner.c  test_soft_sha_runner.c  test_soft_x963kdf_runner.c
tests/src/test_runners/blockcipher/: test_scl_aes_runner.c
tests/src/test_runners/hash/: test_scl_sha_runner.c
tests/src/test_runners/key_derivation_functions/: test_scl_kdf_runner.c
tests/src/test_runners/message_auth/: test_scl_hmac_runner.c
tests/src/test_runners/selftests/: test_scl_selftests_runner.c
(+65 files in other folders)
